[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "In this project, it will fetch research papers based on a user-specified query. The program identifies papers with at least one author affiliated with a pharmaceutical or biotech company and return the result as a CSV file"
authors = [
    {name = "Tanuja Bedre"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"

